Update API Specs
