# app/Http/Resources/Screens/SpotCharacterResource.php
@@ -12,7 +12,7 @@ class SpotCharacterResource extends JsonResource
      * Transform the spot resource into an array.
      *
      * @OA\Schema(
-     *     schema="SpotCharacter",
+     *     schema="SpotCharacters",
      *     type="array",
      *     @OA\Items(
      *      @OA\Property(property="id",type="integer",format="int64",example=8),
@@ -22,6 +22,16 @@ class SpotCharacterResource extends JsonResource
      *      @OA\Property(property="is_purchased",type="boolean",format="boolean",example=true),
      *      @OA\Property(property="created_at",type="timestamp",format="date",example="2020-03-10T19:42:31+09:00")
      *     )
+     * )
+     *
+     * @OA\Schema(
+     *     schema="SpotCharacter",
+     *     @OA\Property(property="id",type="integer",format="int64",example=8),
+     *     @OA\Property(property="name",type="string",format="string",example="lion"),
+     *     @OA\Property(property="image_url",type="string",format="string",example="https://vtuberland.test/images/characters/008-lion.png"),
+     *     @OA\Property(property="video_url",type="string",format="string",example="https://youtu.be/WjoplqS1u18"),
+     *     @OA\Property(property="is_purchased",type="boolean",format="boolean",example=true),
+     *     @OA\Property(property="created_at",type="timestamp",format="date",example="2020-03-10T19:42:31+09:00")
      * )
      *
      * @param  \Illuminate\Http\Request  $request
