# app/Http/Resources/Screens/SpotViewResource.php
@@ -14,7 +14,7 @@ class SpotViewResource extends JsonResource
      *     @OA\Property(property="name",type="string",format="string",example="Roller Coaster"),
      *     @OA\Property(property="content",type="string",format="string"),
      *     @OA\Property(property="image_url",type="string",format="string", example="https://vtuberland.test/images/spots/rollercoaster.jpg"),
-     *     @OA\Property(property="characters",ref="#/components/schemas/SpotCharacter"),
+     *     @OA\Property(property="characters",ref="#/components/schemas/SpotCharacters"),
      *     @OA\Property(property="created_at",type="timestamp",format="date",example="2020-03-10T19:42:31+09:00")
      * )
      *
